--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    padding: 2rem 10%;
+    padding: 2rem 20%;
     border-bottom: 1px solid var(--boder-color);
     display: flex;
     justify-content: space-between;
@@ -15,7 +15,7 @@
 }
 
 .logo {
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-decoration: none;
     color: var(--text-color);
     font-weight: 800;
@@ -29,7 +29,7 @@
 
 .navbar a {
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     color: var(--text-color);
     margin-left: 3rem;
     font-weight: 500;
@@ -58,14 +58,14 @@
 }
 
 .home-content h1 {
-    font-size: 8rem;
+    font-size: 5rem;
     font-weight: 700;
     margin-top: 1.5rem;
     line-height: 1;
 }
 
 .home-content h3 {
-    font-size: 4rem;
+    font-size: 3rem;
     margin: 1rem 0;
 }
 
@@ -84,31 +84,34 @@
 }
 
 .about h2 {
-    font-size: 7rem;
+    font-size: 4rem;
+    margin-top: 0;
     text-align: center;
 }
 
 .about-desc {
     display: flex;
     justify-content: center;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
+    font-weight: 500;
     gap: 10rem;
 }
 
 .about-info li:first-child {
     list-style: none;
     color: var(--main-color);
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .about-prof-goal {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
+    font-weight: 500;
     margin-top: 3rem;
 }
 
 /* Skills */
 .skills h2 {
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
 }
 
 .skills-container {
@@ -147,7 +150,7 @@
 }
 
 .skill-info h4 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     margin: 2rem 0;
     font-weight: 700;
 }
@@ -158,7 +161,7 @@
 }
 
 .skill-info i {
-    font-size: 5rem;
+    font-size: 4rem;
 }
 
 /* achievements */
@@ -192,13 +195,13 @@
 }
 
 .achievements-box p {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 700;
 }
 
 .achievements-box a {
     margin: 6rem 0 3rem 0;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     color: white;
     font-weight: 600;
     letter-spacing: 1px;
@@ -222,7 +225,7 @@
 
 .projects-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     align-items: center;
     gap: 2.5rem;
 }
@@ -272,7 +275,7 @@
 }
 
 .projects-layer p {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin: 0.5rem;
 }
 
@@ -302,7 +305,7 @@
     justify-content: center;
     align-items: center;
     gap: 10rem;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
 
 .contact-form form {
@@ -317,7 +320,7 @@
 .contact-message textarea {
     width: 100%;
     padding: 2rem;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     outline: none;
     border-radius: 1rem;
     border: 2px solid rgba(30, 144, 255, 0.5);
@@ -335,7 +338,7 @@
     padding: 1rem 2rem;
     border: none;
     border-radius: 2rem;
-    background-color: var(--main-color);
+    background: linear-gradient(135deg, #007BFF, #8E44AD);
     box-shadow: 0 0 5px var(--main-color);
     cursor: pointer;
     transition: 0.2s ease;
@@ -382,7 +385,8 @@
 
 .footer ul {
     list-style: none;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
+    font-weight: 500;
 }
 
 .footer ul li i {
